Fix border not showing when person filter is active

--- a/va-virkailija/web/va/style/virkailija.less
+++ b/va-virkailija/web/va/style/virkailija.less
@@ -115,7 +115,8 @@ h3 {
 }
 
 .btn-selected--border{
-  border: 2px @blue;
+  border-width: 2px;
+  border-color: @blue;
 }
 
 .btn-tag{
